directory

-------------------------------------------------------------------------------

Sun Oct  3 13:09:10 PDT 1999
(Raster)

add soem smarts to icon imges to limit the size to the iconox size... :)

-------------------------------------------------------------------------------

Sun Oct  3 13:18:30 PDT 1999
(Mandrake)

patch to have only one dialog box for logging out, courtesy of
"Daniel Erat" <erat@cats.ucsc.edu>

-------------------------------------------------------------------------------

Sun Oct  3 14:43:23 PDT 1999
(Raster)

have the imagelcass pixmap freere read the pixmap id right.

-------------------------------------------------------------------------------

Sun Oct  3 14:47:51 PDT 1999
(Raster)

read pixmap id like all other id's

-------------------------------------------------------------------------------

Sun Oct  3 16:41:28 PDT 1999
(Mandrake)

fixed a bug where you couldn't ever delete snapshot information about a window
without removing all the snapshot specs.  thanks to XStauff for pointing it
out.

-------------------------------------------------------------------------------

Sun Oct  3 16:46:39 PDT 1999
(Raster)

get rid of debugign  printfs....

-------------------------------------------------------------------------------

Sun Oct  3 16:58:09 PDT 1999
(Raster)

fix exist handler for pager to pass the right param... :)

-------------------------------------------------------------------------------

Sun Oct  3 17:26:37 PDT 1999
(Raster)

fix mem leak in ipc... :)

-------------------------------------------------------------------------------

Sun Oct  3 18:03:12 PDT 1999
(Mandrake)

typo

-------------------------------------------------------------------------------

Sun Oct  3 18:23:28 PDT 1999
(Raster)

flippy iconify anim + resize DOWN not UP with icons if > iconsize

-------------------------------------------------------------------------------

Sun Oct  3 18:28:53 PDT 1999
(Raster)

flippy icon patch :)