@@ -2968,3 +2968,10 @@ Sun Oct  3 18:28:53 PDT 1999
 (Raster)
 
 flippy icon patch :)
+
+-------------------------------------------------------------------------------
+
+Sun Oct  3 21:28:31 PDT 1999
+(Raster)
+
+grouped window patch for pager if moving form desktop -> desk
